autotests/syntax-tests/tests/negative/negative115.sref
Name { Name Name ( Name ) [ Name ( ) ] e.Var Name # Name 'chars' 123 = $ESWAP Name Name : = ; = ; } ; 